[package]
authors = ["David Flemström <david.flemstrom@gmail.com>", "Tad Fisher <tadfisher@gmail.com>"]
categories = ["embedded", "hardware-support", "no-std"]
description = "Board support crate common types for the Particle Generation 3 devices (Argon, Boron, Xenon)"
keywords = ["arm", "cortex-m", "nrf52840", "hal"]
license = "MIT OR Apache-2.0"
name = "particle-gen3-common"
repository = "https://github.com/tadfisher/particle-rs"
documentation = "https://docs.rs/particle-gen3-common/0.0.1/particle-gen3-common/"
version = "0.0.1"
edition = "2018"

[dependencies]
nrf52840-hal = "0.12.1"
