[package]
authors = ["Tad Fisher <tadfisher@gmail.com>"]
categories = ["embedded", "hardware-support", "no-std"]
description = "Board support crate for the Particle Xenon device"
keywords = ["arm", "cortex-m", "nrf52840", "hal"]
license = "MIT OR Apache-2.0"
name = "particle-xenon"
repository = "https://github.com/tadfisher/particle-rs"
documentation = "https://docs.rs/particle-xenon/0.0.1/particle_xenon/"
version = "0.0.1"
edition = "2018"

[dependencies]
cortex-m = "0.7.2"
cortex-m-rt = "0.6.13"
embedded-hal = "0.2.4"
nrf52840-hal = "0.12.1"
particle-gen3-common = { path = "../gen3-common/" }

[dev-dependencies]
cortex-m-rt = "0.6.13"
cortex-m-semihosting = "0.3.7"
panic-halt = "0.2.0"
panic-semihosting = "0.5.6"
nb = "1.0.0"

[features]
rt = ["nrf52840-hal/rt"]
default = ["rt"]
